challenge10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wraki-ingress
  namespace: wraki
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: webnodb.wraki.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webnodb-service
            port:
              number: 80
  - host: webdb.wraki.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdb-service
            port:
              number: 80
